# AnApp

./: .gitignore
client/: Cargo.toml
client/src/: login.rs  main.rs  settings.rs
client/src/api/: mod.rs
client_lib/: Cargo.toml
client_lib/src/: auth.rs  lib.rs  user.rs
gui/: Cargo.toml  Makefile  index.html
gui/src/: login.rs  main.rs  settings.rs
proto/: Cargo.toml  build.rs
proto/schemas/: auth.proto  hello.proto  user.proto  users.proto
proto/src/: lib.rs
server/: Cargo.toml
server/src/: invite.rs  jwt.rs  main.rs  refresh_token.rs  users.rs
server/src/services/: auth.rs  user.rs
server/static/: index.html
