[package]
name = "client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
proto = { path = "../proto", default-features = false, features = ["client"]}
serde = {version = "1.0", features = ["derive"] }
prost = { version = "0.7.0", default-features = false }
jsonwebtoken = "7"


# Non web version
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = "0.5"


[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic = { version = "0.5", default-features = false, features = ["codegen", "prost"] }
