[package]
name = "proto"
version = "0.1.0"
authors = ["tet <gmorer@pm.me>"]
edition = "2018"

[features]
client = []
server = ["tonic-build/transport"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = { git = "https://github.com/gmorer/tonic/", branch = "master", package = "tonic", default-features = false, features = ["codegen", "prost"] }
prost = { version = "0.7.0", default-features = false }

[build-dependencies]
tonic-build = { git = "https://github.com/gmorer/tonic/", branch = "master", package = "tonic-build", default-features = false, features = ["prost"] }
