[package]
name = "proto"
version = "0.1.0"
authors = ["tet <gmorer@pm.me>"]
edition = "2018"

[features]
client = []
server = ["tonic-build/transport", "tonic/transport"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = "0.5"
prost = { version = "0.8.0", default-features = false }

[build-dependencies]
tonic-build = "0.5"
